Removing Drivers (in python) Leads to Crash #63896

Closed
opened 2019-04-26 04:01:01 +02:00 by Ovionis · 5 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 57), branch: master, commit date: 2019-04-16 20:13, hash: 5d8030b8f3
Worked: (optional)

If you remove a driver from an object or data in python, via

  1. (object/data).animation_data.drivers
  2. (object/data).driver_remove("property")
    The driver will be removed, as intended.
    However, if you change ANY of the (item's) properties afterwards, Blender will crash.

Python Data Crash.blend

2019-04-25 20-54-23.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 57), branch: master, commit date: 2019-04-16 20:13, hash: `5d8030b8f3` Worked: (optional) If you remove a driver from an object or data in python, via 1) (`object`/`data`).animation_data.drivers 2) (`object`/`data`).driver_remove(`"property"`) The driver will be removed, as intended. However, if you change ANY of the (item's) properties afterwards, Blender will crash. [Python Data Crash.blend](https://archive.blender.org/developer/F6977469/Python_Data_Crash.blend) [2019-04-25 20-54-23.mp4](https://archive.blender.org/developer/F6977468/2019-04-25_20-54-23.mp4)
Author

Added subscriber: @Phigon

Added subscriber: @Phigon

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-04-26 15:19:08 +02:00

Backtrace:

Thread 27 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd97fb700 (LWP 7300)]
0x0000555557db631f in BKE_animsys_eval_driver (depsgraph=0x7fffe6319408, id=0x7fffdd8fef08, driver_index=0, driver_orig=0x7fffd0d3bcc8)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4036
4036	  DEG_debug_print_eval_subdata_index(
(gdb) bt
#0  0x0000555557db631f in BKE_animsys_eval_driver (depsgraph=0x7fffe6319408, id=0x7fffdd8fef08, driver_index=0, driver_orig=0x7fffd0d3bcc8)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4036
#1  0x0000555557f62211 in std::__invoke_impl<void, void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__f=
    @0x7fffd434db40: 0x555557db6279 <BKE_animsys_eval_driver>, __args#0=@0x7fffd97fab10: 0x7fffe6319408, __args#1=@0x7fffd434db58: 0x7fffdd8fef08,
    __args#2=@0x7fffd434db50: 0, __args#3=@0x7fffd434db48: 0x7fffd0d3bcc8) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#2  0x0000555557f60d6a in std::__invoke<void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__fn=
    @0x7fffd434db40: 0x555557db6279 <BKE_animsys_eval_driver>, __args#0=@0x7fffd97fab10: 0x7fffe6319408, __args#1=@0x7fffd434db58: 0x7fffdd8fef08,
    __args#2=@0x7fffd434db50: 0, __args#3=@0x7fffd434db48: 0x7fffd0d3bcc8) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#3  0x0000555557f5f5b3 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) (this=0x7fffd434db40, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
- 4  0x0000555557f5d586 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffd434db40, __args#0=@0x7fffd97fab10: 0x7fffe6319408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
- 5  0x0000555557f5a5b2 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd97fab10: 0x7fffe6319408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#6  0x0000555557f7639f in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd45e0040, __args#0=0x7fffe6319408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#7  0x0000555557f7593d in DEG::deg_task_run_func (pool=0x7fffd449b008, taskdata=0x7fffd45dffc8, thread_id=5)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86
- 8  0x0000555557eeb613 in task_scheduler_thread_run (thread_p=0x7fffdd98e8f8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:438
- 9  0x00007ffff3413443 in start_thread () from /lib64/libpthread.so.0
#10 0x00007ffff333d5af in clone () from /lib64/libc.so.6

@Sergey I'm guessing that the driver is no properly removed with the python command. If this is not for you, feel free to reassign.

Backtrace: ``` Thread 27 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd97fb700 (LWP 7300)] 0x0000555557db631f in BKE_animsys_eval_driver (depsgraph=0x7fffe6319408, id=0x7fffdd8fef08, driver_index=0, driver_orig=0x7fffd0d3bcc8) at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4036 4036 DEG_debug_print_eval_subdata_index( (gdb) bt #0 0x0000555557db631f in BKE_animsys_eval_driver (depsgraph=0x7fffe6319408, id=0x7fffdd8fef08, driver_index=0, driver_orig=0x7fffd0d3bcc8) at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4036 #1 0x0000555557f62211 in std::__invoke_impl<void, void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__f= @0x7fffd434db40: 0x555557db6279 <BKE_animsys_eval_driver>, __args#0=@0x7fffd97fab10: 0x7fffe6319408, __args#1=@0x7fffd434db58: 0x7fffdd8fef08, __args#2=@0x7fffd434db50: 0, __args#3=@0x7fffd434db48: 0x7fffd0d3bcc8) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #2 0x0000555557f60d6a in std::__invoke<void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__fn= @0x7fffd434db40: 0x555557db6279 <BKE_animsys_eval_driver>, __args#0=@0x7fffd97fab10: 0x7fffe6319408, __args#1=@0x7fffd434db58: 0x7fffdd8fef08, __args#2=@0x7fffd434db50: 0, __args#3=@0x7fffd434db48: 0x7fffd0d3bcc8) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #3 0x0000555557f5f5b3 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) (this=0x7fffd434db40, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 - 4 0x0000555557f5d586 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffd434db40, __args#0=@0x7fffd97fab10: 0x7fffe6319408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 - 5 0x0000555557f5a5b2 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd97fab10: 0x7fffe6319408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #6 0x0000555557f7639f in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd45e0040, __args#0=0x7fffe6319408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #7 0x0000555557f7593d in DEG::deg_task_run_func (pool=0x7fffd449b008, taskdata=0x7fffd45dffc8, thread_id=5) at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86 - 8 0x0000555557eeb613 in task_scheduler_thread_run (thread_p=0x7fffdd98e8f8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:438 - 9 0x00007ffff3413443 in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff333d5af in clone () from /lib64/libc.so.6 ``` @Sergey I'm guessing that the driver is no properly removed with the python command. If this is not for you, feel free to reassign.

This issue was referenced by 03d482d212

This issue was referenced by 03d482d212945eb46144524ccb8824d6889e8039

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63896
No description provided.