Fix T63896: Removing Drivers in Python Leads to Crash

Adding and removing drivers must always tag relations for update.